--- a/노는법.html
+++ b/노는법.html
@@ -44,8 +44,8 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base" href="노는법.html#sec-a613" data-page-id="57068633" style="padding: 10px 20px;">노는법을 만드는 이유</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base" href="노는법.html#sec-66da" data-page-id="57068633" style="padding: 10px 20px;">Why 노는법</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base" href="노는법.html#sec-f35d" data-page-id="57068633" style="padding: 10px 20px;">콘텐츠 소개</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base" href="노는법.html#sec-e641" data-page-id="57068633" style="padding: 10px 20px;">Why 노는법</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base" href="노는법.html#sec-88a5" data-page-id="57068633" style="padding: 10px 20px;">만족도 높은 실제 후기</a>
 </li></ul>
           </div>
@@ -54,8 +54,8 @@
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-a613" data-page-id="57068633" style="padding: 10px 20px;">노는법을 만드는 이유</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-66da" data-page-id="57068633" style="padding: 10px 20px;">Why 노는법</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-f35d" data-page-id="57068633" style="padding: 10px 20px;">콘텐츠 소개</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-e641" data-page-id="57068633" style="padding: 10px 20px;">Why 노는법</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-88a5" data-page-id="57068633" style="padding: 10px 20px;">만족도 높은 실제 후기</a>
 </li></ul>
               </div>
