--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base"
                 href="노는법.html#sec-88a5" data-page-id="57068633" style="padding: 10px 20px;">만족도 높은 실제 후기</a>
             </li>
+            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base"
+                href="노는법.html#carousel_77d3" data-page-id="57068633" style="padding: 10px 20px;">노는법 보러가기</a>
+            </li>
           </ul>
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
@@ -93,6 +96,9 @@
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-88a5"
                     data-page-id="57068633" style="padding: 10px 20px;">만족도 높은 실제 후기</a>
+                </li>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#carousel_77d3"
+                    data-page-id="57068633" style="padding: 10px 20px;">노는법 보러가기</a>
                 </li>
               </ul>
             </div>
@@ -861,6 +867,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </p>
     </div>
   </footer>
+
+
 </body>
 
 </html>
