--- a/노는법.html
+++ b/노는법.html
@@ -632,57 +632,58 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     <div class="u-clearfix u-sheet u-sheet-1">
       <h2 class="u-subtitle u-text u-text-default u-text-1" data-animation-name="fadeIn" data-animation-duration="1000"
         data-animation-delay="0">실제 참여자 리뷰</h2>
-      <div class="u-layout-horizontal u-list u-list-1">
+      <div class="u-expanded-width-xs u-layout-grid u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-container-style u-list-item u-repeater-item u-list-item-1" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-              <div
-                class="u-align-left u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-1">
+            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
+              <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-1">
                 <div class="u-container-layout u-container-layout-2">
-                  <h1 class="u-text u-text-2"> 프**아 님 참여리뷰</h1>
-                  <p class="u-large-text u-text u-text-variant u-text-3"> 차 소리 대신 새소리 물소리가 들리는 민박집에서의 1박2일은 진정한 휴식과
-                    힐링이었습니다. 대접받는 느낌이 꽤나 짜릿했구요ㅎㅎ 밤늦게까지 이어졌던 불멍도 담날 지붕을 때리던 빗소리도 모두 잠시 동화속을 다녀온 듯 아련합니다.</p>
+                  <h1 class="u-align-right u-text u-text-2"> 프**아 님 참여리뷰</h1>
+                  <p class="u-align-left u-large-text u-text u-text-variant u-text-3"> 차 소리 대신 새소리 물소리가 들리는 민박집에서의 1박2일은
+                    진정한 휴식과 힐링이었습니다. 대접받는 느낌이 꽤나 짜릿했구요ㅎㅎ 밤늦게까지 이어졌던 불멍도 담날 지붕을 때리던 빗소리도 모두 잠시 동화속을 다녀온 듯 아련합니다.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item u-list-item-2" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
-              <div
-                class="u-align-left u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-2">
+            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
+              <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-2">
                 <div class="u-container-layout u-container-layout-4">
-                  <h1 class="u-text u-text-default u-text-4"> 문*영 님 참여리뷰&nbsp;</h1>
-                  <p class="u-large-text u-text u-text-variant u-text-5"> 따뜻한 금요일 오후에 즐거운 시간이었습니다. 초보자인 저희들에게 와인에 대한 전반적
-                    설명과 함께 와인도 마시며 사장님과 함께 참여한 언니분과 친구처럼 대화 나누고 시간 가는줄 모르게 수다떨고 왔네요ㅎㅎ 이제 와인사러 갈때 아는척을 할수 있겠어요. 다음에 또
-                    놀러갈께요~~~</p>
+                  <h1 class="u-align-right u-text u-text-4"> 문*영 님 참여리뷰&nbsp;</h1>
+                  <p class="u-align-left u-large-text u-text u-text-variant u-text-5"> 따뜻한 금요일 오후에 즐거운 시간이었습니다. 초보자인
+                    저희들에게 와인에 대한 전반적 설명과 함께 와인도 마시며 사장님과 함께 참여한 언니분과 친구처럼 대화 나누고 시간 가는줄 모르게 수다떨고 왔네요ㅎㅎ 이제 와인사러 갈때 아는척을
+                    할수 있겠어요. 다음에 또 놀러갈께요~~~</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item u-list-item-3" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5">
-              <div
-                class="u-align-left u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-3">
+            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
+              <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-3">
                 <div class="u-container-layout u-container-layout-6">
-                  <h1 class="u-text u-text-default u-text-6"> s**l 님 참여리뷰</h1>
-                  <p class="u-large-text u-text u-text-variant u-text-7"> 그간 쌓였던 불량에너지가 싹 다 정화된 기분입니다. 성의있고 푸짐했던 조식은 지금도
-                    아침마다 눈에 밟히네요. 바른먹거리의 지혜를 전수 받기 위해 숨은고수를 찾은 아름다운 수행같은 매력적인 여행이었어요. 사계절 두루 체험해보고 싶네요 😘</p>
+                  <h1 class="u-align-right u-text u-text-6"> s**l 님 참여리뷰</h1>
+                  <p class="u-align-left u-large-text u-text u-text-variant u-text-7"> 그간 쌓였던 불량에너지가 싹 다 정화된 기분입니다. 성의있고
+                    푸짐했던 조식은 지금도 아침마다 눈에 밟히네요. 바른먹거리의 지혜를 전수 받기 위해 숨은고수를 찾은 아름다운 수행같은 매력적인 여행이었어요. 사계절 두루 체험해보고 싶네요 😘
+                  </p>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="u-expanded-width-xs u-layout-grid u-list u-list-2">
+        <div class="u-repeater u-repeater-2">
           <div class="u-container-style u-list-item u-repeater-item u-list-item-4" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-7">
-              <div
-                class="u-align-left u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-4">
+              <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-4">
                 <div class="u-container-layout u-container-layout-8">
-                  <h1 class="u-text u-text-default u-text-8"> 부**찌&nbsp;님 참여리뷰&nbsp;</h1>
-                  <p class="u-large-text u-text u-text-variant u-text-9"> 아까운 주말시간 투자하기에 전혀 후회가 되지 않는 좋은분들과의 즐거운
-                    시간이었습니다. 함께 참여하신 분들도 첨 보았지만 친근감있게 농담도 하고 질문도 해가며 사진으로 추억도 남겼답니다. 담에 또 진행하시면 참여하고 싶어요.</p>
+                  <h1 class="u-align-right u-text u-text-8"> 부**찌&nbsp;님 참여리뷰&nbsp;</h1>
+                  <p class="u-align-left u-large-text u-text u-text-variant u-text-9"> 아까운 주말시간 투자하기에 전혀 후회가 되지 않는
+                    좋은분들과의 즐거운 시간이었습니다. 함께 참여하신분들도 첨 보았지만 친근감있게 농담도 하고 질문도 해가며 사진으로 추억도 남겼답니다. 담에 또 진행하시면 참여하고 싶어요.</p>
                 </div>
               </div>
             </div>
@@ -690,12 +691,11 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-container-style u-list-item u-repeater-item u-list-item-5" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-9">
-              <div
-                class="u-align-left u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-5">
+              <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-5">
                 <div class="u-container-layout u-container-layout-10">
-                  <h1 class="u-text u-text-default u-text-10"> 0* 님 참여리뷰&nbsp;</h1>
-                  <p class="u-large-text u-text u-text-variant u-text-11"> 우선 즐겁습니다. 두번째 강사님이 부담갖지 않도록 리드해주셔요~ 싫증 잘 내는
-                    제가 완주할 수 있었던 것도 강사님의 몫! 제 인생의 색다른 경험이었습니다!</p>
+                  <h1 class="u-align-right u-text u-text-10"> Ch**ng 님 참여리뷰</h1>
+                  <p class="u-align-left u-large-text u-text u-text-variant u-text-11"> 연기톤으로 대사해보기는 인생 첨인데 재밌었어요. 참여하신
+                    분들 모두 배우같이 감정섞어 드라마를 연기했고 게임처럼 즐겁게 즐기다가 왔습니다. 넘 좋았어요!</p>
                 </div>
               </div>
             </div>
@@ -703,64 +703,16 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-container-style u-list-item u-repeater-item u-list-item-6" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-11">
-              <div
-                class="u-align-left u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-6">
+              <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-6">
                 <div class="u-container-layout u-container-layout-12">
-                  <h1 class="u-text u-text-default u-text-12"> Ch**ng 님 참여리뷰&nbsp;</h1>
-                  <p class="u-large-text u-text u-text-variant u-text-13"> 연기톤으로 대사해보기는 인생 첨인데 재밌었어요. 참여하신 분들 모두 배우같이
-                    감정섞어 드라마를 연기했고 게임처럼 즐겁게 즐기다가 왔습니다. 넘 좋았어요!</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="u-container-style u-list-item u-repeater-item u-list-item-7" data-animation-name="fadeIn"
-            data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-13">
-              <div
-                class="u-align-left u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-7">
-                <div class="u-container-layout u-container-layout-14">
-                  <h1 class="u-text u-text-default u-text-14"> 김*수 님 참여리뷰&nbsp;</h1>
-                  <p class="u-large-text u-text u-text-variant u-text-15"> 따뜻하고 친근한 에너지로 그 모든 상황으로 집중하고 몰입할 수 있는 시간이었어요.
-                    오롯이 그 시간 속에 머물며 즐길 수 있어서 더할나위없이 채워지는 경험이 되었습니다! 좋은 분들과 함께여서 더욱 즐거운 추억이 되었네요</p>
+                  <h1 class="u-align-right u-text u-text-12"> 김*수 님 참여리뷰&nbsp;</h1>
+                  <p class="u-align-left u-large-text u-text u-text-variant u-text-13"> 따뜻하고 친근한 에너지로 그 모든 상황으로 집중하고 몰입할
+                    수 있는 시간이었어요. 오롯이 그 시간 속에 머물며 즐길 수 있어서 더할나위없이 채워지는 경험이 되었습니다! 좋은 분들과 함께여서 더욱 즐거운 추억이 되었네요&nbsp;</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-1"
-          href="#" role="button">
-          <span aria-hidden="true">
-            <svg viewBox="0 0 451.847 451.847">
-              <path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path>
-            </svg>
-          </span>
-          <span class="sr-only">
-            <svg viewBox="0 0 451.847 451.847">
-              <path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path>
-            </svg>
-          </span>
-        </a>
-        <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-2"
-          href="#" role="button">
-          <span aria-hidden="true">
-            <svg viewBox="0 0 451.846 451.847">
-              <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
-            </svg>
-          </span>
-          <span class="sr-only">
-            <svg viewBox="0 0 451.846 451.847">
-              <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path>
-            </svg>
-          </span>
-        </a>
       </div>
     </div>
   </section>
@@ -774,7 +726,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div
               class="u-container-style u-layout-cell u-opacity u-opacity-75 u-shape-rectangle u-size-30 u-layout-cell-1"
               data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0">
-              <div class="u-container-layout u-container-layout-1">
+              <div
+                class="u-container-layout u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-container-layout-1">
                 <img class="u-image u-image-default u-image-1" src="images/2.png" alt="" data-image-width="456"
                   data-image-height="433">
               </div>
@@ -814,7 +767,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-layout-row">
             <div
               class="u-container-style u-layout-cell u-opacity u-opacity-75 u-shape-rectangle u-size-30 u-layout-cell-3">
-              <div class="u-container-layout u-container-layout-3">
+              <div class="u-container-layout u-valign-bottom-xs u-container-layout-3">
                 <img class="u-image u-image-default u-image-3" src="images/1.png" alt="" data-image-width="933"
                   data-image-height="535" data-animation-name="fadeIn" data-animation-duration="1000"
                   data-animation-delay="0">
@@ -867,7 +820,6 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </p>
     </div>
   </footer>
-
 
 </body>
 
