--- a/노는법.html
+++ b/노는법.html
@@ -144,7 +144,7 @@
       </p>
     </div>
   </section>
-  <section class="u-align-left u-clearfix u-image u-section-3" id="sec-66da" data-image-width="1200"
+  <section class="u-align-left u-clearfix u-image u-section-3" id="carousel_a0a1" data-image-width="1200"
     data-image-height="801">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h2 class="u-subtitle u-text u-text-body-alt-color u-text-1" data-animation-name="fadeIn"
@@ -430,49 +430,35 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <p class="u-gallery-text">Sample Text</p>
             </div>
             <style data-mode="XL" data-visited="true"></style>
-            <style data-mode="LG"></style>
+            <style data-mode="LG" data-visited="true"></style>
             <style data-mode="MD"></style>
             <style data-mode="SM"></style>
             <style data-mode="XS" data-visited="true"></style>
           </div>
-          <div class="u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="800" data-image-height="600">
+          <div class="u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="800" data-image-height="638">
             <div class="u-back-slide">
-              <img class="u-back-image u-expanded" src="images/__6.jpg">
+              <img class="u-back-image u-expanded" src="images/13fe668dae4c4b6ab3632ac029cfe99f.jpg">
             </div>
             <div class="u-align-center-xs u-over-slide u-valign-bottom-xs u-over-slide-5">
               <h3 class="u-gallery-heading">Sample Title</h3>
               <p class="u-gallery-text">Sample Text</p>
             </div>
             <style data-mode="XL"></style>
-            <style data-mode="LG"></style>
+            <style data-mode="LG" data-visited="true"></style>
             <style data-mode="MD"></style>
             <style data-mode="SM"></style>
             <style data-mode="XS" data-visited="true"></style>
           </div>
-          <div class="u-carousel-item u-gallery-item u-carousel-item-6" data-image-width="800" data-image-height="638">
+          <div class="u-carousel-item u-gallery-item u-carousel-item-6" data-image-width="800" data-image-height="389">
             <div class="u-back-slide">
-              <img class="u-back-image u-expanded" src="images/13fe668dae4c4b6ab3632ac029cfe99f.jpg">
+              <img class="u-back-image u-expanded" src="images/3.jpg">
             </div>
             <div class="u-align-center-xs u-over-slide u-valign-bottom-xs u-over-slide-6">
               <h3 class="u-gallery-heading">Sample Title</h3>
               <p class="u-gallery-text">Sample Text</p>
             </div>
             <style data-mode="XL"></style>
-            <style data-mode="LG"></style>
-            <style data-mode="MD"></style>
-            <style data-mode="SM"></style>
-            <style data-mode="XS" data-visited="true"></style>
-          </div>
-          <div class="u-carousel-item u-gallery-item u-carousel-item-7" data-image-width="800" data-image-height="389">
-            <div class="u-back-slide">
-              <img class="u-back-image u-expanded" src="images/3.jpg">
-            </div>
-            <div class="u-align-center-xs u-over-slide u-valign-bottom-xs u-over-slide-7">
-              <h3 class="u-gallery-heading">Sample Title</h3>
-              <p class="u-gallery-text">Sample Text</p>
-            </div>
-            <style data-mode="XL"></style>
-            <style data-mode="LG"></style>
+            <style data-mode="LG" data-visited="true"></style>
             <style data-mode="MD"></style>
             <style data-mode="SM"></style>
             <style data-mode="XS" data-visited="true"></style>
@@ -527,12 +513,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <img class="u-carousel-thumbnail-image u-image" src="images/05.jpg">
           </li>
           <li class="u-carousel-thumbnail u-carousel-thumbnail-5" data-u-target="#carousel-2d8e" data-u-slide-to="4">
-            <img class="u-carousel-thumbnail-image u-image" src="images/__6.jpg">
-          </li>
-          <li class="u-carousel-thumbnail u-carousel-thumbnail-6" data-u-target="#carousel-2d8e" data-u-slide-to="5">
             <img class="u-carousel-thumbnail-image u-image" src="images/13fe668dae4c4b6ab3632ac029cfe99f.jpg">
           </li>
-          <li class="u-carousel-thumbnail u-carousel-thumbnail-7" data-u-target="#carousel-2d8e" data-u-slide-to="6">
+          <li class="u-carousel-thumbnail u-carousel-thumbnail-6" data-u-target="#carousel-2d8e" data-u-slide-to="5">
             <img class="u-carousel-thumbnail-image u-image" src="images/3.jpg">
           </li>
         </ol>
@@ -636,7 +619,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <div class="u-repeater u-repeater-1">
           <div class="u-container-style u-list-item u-repeater-item u-list-item-1" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
+            <div
+              class="u-container-layout u-similar-container u-valign-bottom-xl u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-1">
               <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-1">
                 <div class="u-container-layout u-container-layout-2">
                   <h1 class="u-align-right u-text u-text-2"> 프**아 님 참여리뷰</h1>
@@ -648,7 +632,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </div>
           <div class="u-container-style u-list-item u-repeater-item u-list-item-2" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
+            <div
+              class="u-container-layout u-similar-container u-valign-bottom-xl u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
               <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-2">
                 <div class="u-container-layout u-container-layout-4">
                   <h1 class="u-align-right u-text u-text-4"> 문*영 님 참여리뷰&nbsp;</h1>
@@ -661,7 +646,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </div>
           <div class="u-container-style u-list-item u-repeater-item u-list-item-3" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
+            <div
+              class="u-container-layout u-similar-container u-valign-bottom-xl u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-5">
               <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-3">
                 <div class="u-container-layout u-container-layout-6">
                   <h1 class="u-align-right u-text u-text-6"> s**l 님 참여리뷰</h1>
@@ -678,7 +664,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <div class="u-repeater u-repeater-2">
           <div class="u-container-style u-list-item u-repeater-item u-list-item-4" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-7">
+            <div
+              class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-valign-top-xl u-container-layout-7">
               <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-4">
                 <div class="u-container-layout u-container-layout-8">
                   <h1 class="u-align-right u-text u-text-8"> 부**찌&nbsp;님 참여리뷰&nbsp;</h1>
@@ -690,7 +677,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </div>
           <div class="u-container-style u-list-item u-repeater-item u-list-item-5" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-9">
+            <div
+              class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-valign-top-xl u-container-layout-9">
               <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-5">
                 <div class="u-container-layout u-container-layout-10">
                   <h1 class="u-align-right u-text u-text-10"> Ch**ng 님 참여리뷰</h1>
@@ -702,7 +690,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </div>
           <div class="u-container-style u-list-item u-repeater-item u-list-item-6" data-animation-name="fadeIn"
             data-animation-duration="1000" data-animation-delay="0">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-11">
+            <div
+              class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-valign-top-xl u-container-layout-11">
               <div class="u-container-style u-expanded-width u-group u-radius-11 u-shape-round u-white u-group-6">
                 <div class="u-container-layout u-container-layout-12">
                   <h1 class="u-align-right u-text u-text-12"> 김*수 님 참여리뷰&nbsp;</h1>
