--- a/index.html
+++ b/index.html
@@ -41,73 +41,6 @@
 </head>
 
 <body data-home-page="노는법.html" data-home-page-title="노는법" class="u-body u-overlap">
-  <header class="u-clearfix u-header u-header" id="sec-511a">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-        <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
-          <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-            href="#">
-            <svg>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
-            </svg>
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <defs>
-                <symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;">
-                  <rect y="1" width="16" height="2"></rect>
-                  <rect y="7" width="16" height="2"></rect>
-                  <rect y="13" width="16" height="2"></rect>
-                </symbol>
-              </defs>
-            </svg>
-          </a>
-        </div>
-        <div class="u-custom-menu u-nav-container">
-          <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
-            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base"
-                href="노는법.html#sec-a613" data-page-id="57068633" style="padding: 10px 20px;">노는법을 만드는 이유</a>
-            </li>
-            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base"
-                href="노는법.html#sec-f35d" data-page-id="57068633" style="padding: 10px 20px;">콘텐츠 소개</a>
-            </li>
-            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base"
-                href="노는법.html#sec-e641" data-page-id="57068633" style="padding: 10px 20px;">Why 노는법</a>
-            </li>
-            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base"
-                href="노는법.html#sec-88a5" data-page-id="57068633" style="padding: 10px 20px;">만족도 높은 실제 후기</a>
-            </li>
-            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-2-base"
-                href="노는법.html#carousel_77d3" data-page-id="57068633" style="padding: 10px 20px;">노는법 보러가기</a>
-            </li>
-          </ul>
-        </div>
-        <div class="u-custom-menu u-nav-container-collapse">
-          <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-            <div class="u-sidenav-overflow">
-              <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-a613"
-                    data-page-id="57068633" style="padding: 10px 20px;">노는법을 만드는 이유</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-f35d"
-                    data-page-id="57068633" style="padding: 10px 20px;">콘텐츠 소개</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-e641"
-                    data-page-id="57068633" style="padding: 10px 20px;">Why 노는법</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#sec-88a5"
-                    data-page-id="57068633" style="padding: 10px 20px;">만족도 높은 실제 후기</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="노는법.html#carousel_77d3"
-                    data-page-id="57068633" style="padding: 10px 20px;">노는법 보러가기</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-        </div>
-      </nav>
-    </div>
-  </header>
   <section class="u-align-center u-clearfix u-video u-section-1" id="carousel_31c6">
     <div style="" class="u-background-video u-expanded">
       <div class="embed-responsive embed-responsive-1">
@@ -119,11 +52,7 @@
     <div
       class="u-align-right u-container-style u-expanded-width u-group u-opacity u-opacity-60 u-palette-2-dark-2 u-shape-rectangle u-group-1">
       <div class="u-container-layout u-container-layout-1">
-        <p class="u-text u-text-default u-text-1">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1"
-            href="https://nonunbub.com" target="_blank">노는법</a>
-        </p>
-        <h2 class="u-subtitle u-text u-text-2" data-animation-name="fadeIn" data-animation-duration="1000"
+        <h2 class="u-subtitle u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="1000"
           data-animation-delay="0">당신의 가장<br>젊​은 ​순간을<br>놓치지 않게
         </h2>
       </div>
@@ -799,15 +728,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 
 
 
-  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-dcf4">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <p class="u-align-left u-small-text u-text u-text-variant u-text-1"> (주)바바그라운드<br>대표이사: 허정 | 사업자등록번호:
-        393-87-01601<br>관광사업자 등록번호: 제2020-01호<br>통신판매업신고번호 : 2020-서울강남-02841
-      </p>
-      <p class="u-align-left u-small-text u-text u-text-variant u-text-2"> 이메일: nonunbub@gmail.com<br>주소: 서울 강서구 마곡중앙로
-        165 (프라이빗타워1차 1003호)<br>담당자: 032-321-1917
-      </p>
-    </div>
+  <footer class="u-align-center u-clearfix u-footer" id="sec-dcf4">
+    <div class="u-clearfix u-sheet u-sheet-1"></div>
   </footer>
 
 </body>
