--- a/index.html
+++ b/index.html
@@ -723,14 +723,36 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </div>
   </section>
   <style class="u-overlap-style">
-    .u-overlap:not(.u-sticky-scroll) .u-header {}
+    .u-overlap:not(.u-sticky-scroll) .u-header {
+      background-color: #454545 !important
+    }
   </style>
 
 
 
-  <footer class="u-align-center u-clearfix u-footer" id="sec-dcf4">
-    <div class="u-clearfix u-sheet u-sheet-1"></div>
+  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-dcf4">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <p class="u-align-left u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1"> (주)바바그라운드<br>대표이사: 허정 |
+        사업자등록번호: 393-87-01601<br>관광사업자 등록번호: 제2020-01호<br>통신판매업신고번호 : 2020-서울강남-02841
+      </p>
+      <p class="u-align-left u-small-text u-text u-text-custom-color-2 u-text-variant u-text-2"> 이메일:
+        nonunbub@gmail.com<br>주소: 서울 강서구 마곡중앙로 165 (프라이빗타워1차 1003호)<br>담당자: 032-321-1917
+      </p>
+      <p class="u-align-left u-text u-text-3">
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
+          href="https://www.notion.so/gdgdaejeon/f381a7c4327a4ddb9095dd6b0cdd00c9" target="_blank">노는법 소개</a>
+      </p>
+      <p class="u-align-left u-text u-text-4">
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2"
+          href="https://www.notion.so/gdgdaejeon/5ad28ab509bb461090e2bca00af5ac59" target="_blank">개인정보처리방침</a>
+      </p>
+      <p class="u-align-left u-text u-text-5">
+        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-3"
+          href="https://www.notion.so/gdgdaejeon/43b16b117aa840d397a71350a8d08412" target="_blank">이용약관</a>
+      </p>
+    </div>
   </footer>
+
 
 </body>
 
