--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </p>
       <p class="u-align-left u-small-text u-text u-text-custom-color-2 u-text-variant u-text-3">
         <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
-          href="https://nonunbub/tabs/iframe">노는법 소개<br>
+          href="https://nonunbub.com/tabs/iframe">노는법 소개<br>
         </a>
       </p>
       <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2"
