--- a/index.html
+++ b/index.html
@@ -705,20 +705,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       <p class="u-align-left u-small-text u-text u-text-custom-color-2 u-text-variant u-text-2"> 이메일:
         nonunbub@gmail.com<br>주소: 서울 강서구 마곡중앙로 165 (프라이빗타워1차 1003호)<br>담당자: 032-321-1917
       </p>
-      <p class="u-align-left u-small-text u-text u-text-custom-color-2 u-text-variant u-text-3">
-        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
-          href="https://nonunbub.com/tabs/iframe">노는법 소개<br>
-        </a>
-      </p>
-      <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2"
-        href="https://www.notion.so/gdgdaejeon/43b16b117aa840d397a71350a8d08412">이용약관<br>
+      <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
+        href="https://www.notion.so/gdgdaejeon/43b16b117aa840d397a71350a8d08412" target="_blank">이용약관<br>
       </a>
-      <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-3"
-        href="https://www.notion.so/gdgdaejeon/5ad28ab509bb461090e2bca00af5ac59">개인정보처리방침<br>
+      <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2"
+        href="https://www.notion.so/gdgdaejeon/5ad28ab509bb461090e2bca00af5ac59" target="_blank">개인정보처리방침<br>
       </a>
     </div>
   </footer>
-
 </body>
 
 </html>
